# photo_reader

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  LICENSE  README.md  move_spinningDisc.py  pyproject.toml  requirements-build.txt  requirements.txt  splitToWells.py  splitToWells.spec  split_to_wells.py  window.py
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: build-release.yml  mypy.yml  pylint.yml  ruff.yml  tests.yml
photo/: __init__.py  _version.py  eva.py  microscope.py  microscopebase.py  photo.py  spinningDisk.py  spinning_disk.py  utils.py  validators.py  wells.py
tests/: test_eva.py  test_microscopebase.py  test_photo.py  test_spinning_disk.py  test_split_to_wells.py  test_utils.py  test_validators.py  test_wells.py  test_window.py
