[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "photo_reader"
dynamic = ["version"]
description = "Modern GUI and CLI tool for splitting microscope images into well-organized folders."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Nadav Angel", email = "nadavagnel2@gmail.com" }
]
keywords = ["microscope", "bioinformatics", "image-processing", "well-plate", "spinning-disk"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
dependencies = [
    "customtkinter>=6.0.0",
    "Pillow>=10.0.0",
]

[project.urls]
Homepage = "https://github.com/nadavangel/photo_reader"
Repository = "https://github.com/nadavangel/photo_reader.git"
"Bug Tracker" = "https://github.com/nadavangel/photo_reader/issues"

[project.scripts]
split-to-wells = "split_to_wells:main"
split-to-wells-gui = "window:main"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=6.0.0",
    "pytest-github-actions-annotate-failures>=0.4.2",
    "pylint>=4.0.6",
    "ruff>=0.15.18",
    "mypy>=1.15.0",
]
build = [
    "pyinstaller>=6.21.0",
    "setuptools-scm>=8.0",
]

[tool.setuptools]
packages = ["photo"]
py-modules = ["window", "split_to_wells"]

[tool.ruff]
line-length = 150
exclude = ["photo/_version.py"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["F403", "F405"]

[tool.pylint.messages_control]
disable = [
    "logging-fstring-interpolation",
    "too-many-arguments",
    "too-many-positional-arguments",
    "too-many-locals",
    "too-many-branches",
    "too-many-return-statements",
    "too-many-statements",
    "too-few-public-methods",
    "too-many-instance-attributes",
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "protected-access",
    "unused-argument",
    "wrong-import-order",
    "line-too-long",
    "invalid-name",
    "broad-exception-caught",
    "redefined-outer-name",
    "attribute-defined-outside-init",
    "duplicate-code",
    "import-error",
    "no-name-in-module",
]

[tool.pylint.basic]
ignored-modules = ["tkinter", "customtkinter"]

[tool.pylint.format]
max-line-length = 150

[tool.pytest.ini_options]
addopts = "--cov=photo --cov=window --cov=split_to_wells --cov-report=term-missing --cov-branch"
pythonpath = "."

[tool.coverage.run]
branch = true
source = ["photo", "window", "split_to_wells"]
omit = ["photo/_version.py"]

[tool.coverage.report]
show_missing = true
fail_under = 100
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.setuptools_scm]
version_file = "photo/_version.py"
